--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <link rel="stylesheet" href="./homework1.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <title>Wecamp - Homework 1</title>
@@ -272,6 +272,6 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="homework1.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
